@@ -1,5 +1,14 @@
 2007-09-01  Vitaly Alexeev <tishka92@yahoo.com>
 
+		* gameswf/gameswf_as_classes/as_broadcaster.cpp
+		* gameswf/gameswf_object.cpp
+		* gameswf/gameswf_value.cpp
+		* gameswf/gameswf_value.h
+		Fixed as_value::operator=
+		for PROPERTY
+
+2007-09-01  Vitaly Alexeev <tishka92@yahoo.com>
+
 		* gameswf/gameswf.h
 		* gameswf/gameswf_sound_handler_sdl.cpp
 		* gameswf/gameswf_sound_handler_sdl.h
